--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -1,4 +1,10 @@
 {
+  "pages": {
+    "notFound": {
+      "title": "404 - Page not found",
+      "backToRoot": "Back to home"
+    }
+  },
   "routes": {
     "notFound": "page-not-found"
   }
