i18n routes translation added

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -6,6 +6,11 @@
     }
   },
   "routes": {
-    "notFound": "page-not-found"
+    "notFound": "page-not-found",
+    "login": "login",
+    "logout": "logout",
+    "myClasses": "my-classes",
+    "class": "class",
+    "user": "user"
   }
 }
