ui basic layout implemented

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -1,20 +1,32 @@
 {
   "actions": {
-    "continue": "Fortfahren"
+    "continue": "Continue"
+  },
+  "common": {
+    "loading": "Loading"
   },
   "error": {
-    "occurred": "Es ist ein Problem aufgetreten"
+    "title": "Error",
+    "occurred": "An error occurred"
   },
   "pages": {
     "login": {
-      "title": "Anmelden",
-      "login": "Benutzer anmelden",
-      "loggingIn": "Anmeldung läuft",
-      "loggedIn": "Erfolgreich angemeldet"
+      "title": "Login",
+      "login": "Login to the app",
+      "loggingIn": "Logging in...",
+      "loggedIn": "Login successful!"
+    },
+    "logout": {
+      "logout": "Logout",
+      "loggingOut": "Logging out...",
+      "loggedOut": "Successfully logged out!"
     },
     "notFound": {
       "title": "404 - Page not found",
       "backToRoot": "Back to home"
+    },
+    "myClasses": {
+      "title": "My Classes"
     }
   },
   "routes": {
