--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -36,5 +36,25 @@
     "myClasses": "my-classes",
     "class": "class",
     "user": "user"
+  },
+
+  "courses": {
+    "runningCourses": {
+      "ws-19/20-1":{
+        "title": "Course WS 19/20 1"
+      },
+      "ws-19/20-2":{
+        "title": "Course WS 19/20 2"
+      },
+      "ws-19/20-3":{
+        "title": "Course WS 19/20 3"
+      }
+    },
+    "notStartedCourses": {},
+    "completedCourses": {
+      "ss-19-1":{
+        "title": "Course SS-19-1"
+      }
+    }
   }
 }
