issues with css fixed and modals for adding and updating course added

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -3,7 +3,10 @@
     "continue": "Continue"
   },
   "common": {
-    "loading": "Loading"
+    "loading": "Loading",
+    "title": "Title",
+    "startedAt": "Begin",
+    "completedAt": "End"
   },
   "error": {
     "title": "Error",
