--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -1,12 +1,20 @@
 {
   "actions": {
-    "continue": "Continue"
+    "continue": "Continue",
+    "close": "Close",
+    "submit": "Submit",
+    "insert": "Insert",
+    "update": "Update",
+    "delete": "Delete"
   },
   "common": {
     "loading": "Loading",
     "title": "Title",
     "startedAt": "Begin",
-    "completedAt": "End"
+    "completedAt": "End",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "userId": "User ID"
   },
   "error": {
     "title": "Error",
@@ -34,7 +42,25 @@
       "completed": "Completed Courses",
       "upcoming": "Courses not started yet",
       "notFound": "Entries not found",
-      "addNew": "Add new class"
+      "addNew": "Add new class",
+      "modal": {
+        "header": {
+          "addCourse": "Add New Course",
+          "editCourse": "Edit Course",
+          "deleteCourse": "Delete Course"
+        },
+        "body": {
+          "addCourse": {
+            "title": "Course Title"
+          },
+          "editCourse": {
+            "title": "Course Title"
+          },
+          "deleteCourse": {
+            "title": "Are you sure you want to delete this course? This action cannot be reversed."
+          }
+        }
+      }
     }
   }
 }
