api decorators unify decorators build api

--- a/resources/i18n/de/routes.json
+++ b/resources/i18n/de/routes.json
@@ -5,6 +5,7 @@
     "logout": "ausloggen",
     "myClasses": "meine-kurse",
     "class": "kurs-dashboard",
-    "user": "personen-dashboard"
+    "user": "personen-dashboard",
+    "admin": "administrator"
   }
 }
