implemet data loading from remotes for pages

--- a/imports/ui/pages/class/i18n/de.json
+++ b/imports/ui/pages/class/i18n/de.json
@@ -1,7 +1,8 @@
 {
   "pages": {
     "class": {
-      "title": "Kursübersicht"
+      "title": "Kursübersicht",
+      "noFeedback": "Es existieren noch keine Ergebnisse für diese Dimension für diesen Kurs."
     }
   }
 }
