ui remote notifications layout+texts fixed

--- a/resources/i18n/de/de.json
+++ b/resources/i18n/de/de.json
@@ -37,6 +37,10 @@
     "title": "Error",
     "occurred": "Es ist ein Fehler aufgetreten"
   },
+  "remote": {
+    "loggedIn": "Erfolgreich verbunden",
+    "timedOut": "Nicht verbunden, Zeit abgelaufen."
+  },
   "pages": {
     "myClasses": {
       "title": "Meine Kurse"
