course page load feedback data fixed

--- a/resources/i18n/de/de.json
+++ b/resources/i18n/de/de.json
@@ -39,6 +39,7 @@
   },
   "remote": {
     "loggedIn": "Erfolgreich verbunden",
+    "notConnected": "Keine Verbindung",
     "timedOut": "Nicht verbunden, Zeit abgelaufen."
   },
   "pages": {
