--- a/imports/ui/pages/myclasses/i18n/de.json
+++ b/imports/ui/pages/myclasses/i18n/de.json
@@ -15,6 +15,7 @@
       "noCoursesYet": "Es sind noch keine Kurse angelegt",
       "all": "Alle Kurse",
       "noCourses": "* Allein / Kein Kurs",
+      "noCode": "Noch kein Zugangscode hinzugefügt",
       "types": {
         "course": "Kurs",
         "user": "Teilnehmer*in"
