ui routing enable queryParams between pages and user page

--- a/imports/ui/pages/class/i18n/de.json
+++ b/imports/ui/pages/class/i18n/de.json
@@ -1,7 +1,7 @@
 {
   "pages": {
     "class": {
-      "title": "Kursübersicht",
+      "title": "Kurs",
       "noFeedback": "Es existieren noch keine Ergebnisse für diese Dimension für diesen Kurs."
     }
   }
