--- a/resources/i18n/de/de.json
+++ b/resources/i18n/de/de.json
@@ -46,16 +46,10 @@
     "myClasses": {
       "title": "Meine Kurse"
     },
-    "login": {
-      "title": "Login",
-      "login": "Login to the app",
-      "loggingIn": "Logging in...",
-      "loggedIn": "Login successful!"
-    },
     "logout": {
-      "logout": "Logout",
-      "loggingOut": "Logging out...",
-      "loggedOut": "Successfully logged out!"
+      "logout": "Abmelden",
+      "loggingOut": "Sie werden abgemeldet...",
+      "loggedOut": "Sie wurden erfolgreich abgemeldet!"
     },
     "class": {
       "title":"Kurs-Dashboard",
