--- a/resources/i18n/de/de.json
+++ b/resources/i18n/de/de.json
@@ -59,5 +59,9 @@
     "user": {
       "title": "Personen-Dashboard"
     }
+  },
+  "schema": {
+    "required": "{{label}} ist ein Pflichtfeld",
+    "EmailWithTLD": "muss eine gültige Email-Adresse sein"
   }
 }
