feature(ui): user page implemented with records

--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -2,7 +2,30 @@
   "pages": {
     "user": {
       "allDates": "Alle Testungen",
-      "noData": "Es sind noch keine Testreihen von dieser Person abgeschlossen worden."
+      "noData": "Es sind noch keine Testreihen von dieser Person abgeschlossen worden.",
+      "noRecords": "Es sind keine Einträge für diese Auswahl vorhanden."
     }
+  },
+  "dimension": {
+    "title": "Dimension"
+  },
+  "record": {
+    "title": "Testung"
+  },
+  "competency": {
+    "notAccomplished": "Nicht erfüllt",
+    "accomplished": "Voll erfüllt",
+    "partialAccomplished": "Teilweise erfüllt",
+    "undefined": "Nicht bekannt",
+    "new": "Zum ersten mal getestet",
+    "same": "Leistung unverändert",
+    "improved": "Leistung verbessert",
+    "declined": "Leistung verschlechtert",
+    "categories": {
+      "all": "Ohne Kategorie"
+    }
+  },
+  "alphaLevel": {
+    "title": "α-Level"
   }
 }
