--- a/resources/i18n/de/de.json
+++ b/resources/i18n/de/de.json
@@ -28,7 +28,8 @@
     "progress": "Fortschritt"
   },
   "form": {
-    "selectOne": "(Bitte wählen)"
+    "selectOne": "(Bitte wählen)",
+    "selectName": "({{name}} wählen)"
   },
   "alphaLevel": {
     "title": "Alpha-Level"
