--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -15,6 +15,7 @@
   "competency": {
     "notAccomplished": "Nicht erfüllt",
     "accomplished": "Voll erfüllt",
+    "nearAccomplished": "Beinahe erfüllt",
     "partialAccomplished": "Teilweise erfüllt",
     "undefined": "Nicht bekannt",
     "new": "Zum ersten mal getestet",
