ui: added competency filter and load example texts

--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -29,6 +29,7 @@
     "improved": "Leistung verbessert",
     "declined": "Leistung verschlechtert",
     "categories": {
+      "title": "Kategorien an Kann-Beschreibungen",
       "all": "Ohne Kategorie"
     }
   },
