--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -7,7 +7,8 @@
       "filter": {
         "alphaLevel": "Alpha-Level der Kann-Beschreibung",
         "accomplishments": "Erfüllen der Kann-Beschreibung",
-        "development": "Vergleich zu vorherigen Leistungen"
+        "development": "Vergleich zu vorherigen Leistungen",
+        "reset": "Filter zurücksetzen"
       }
     }
   },
