ui: user page fix errors with users that have no account

--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -4,6 +4,7 @@
       "allDates": "Alle Testungen",
       "noData": "Es sind noch keine Testreihen von dieser Person abgeschlossen worden.",
       "noRecords": "Es sind keine Einträge für diese Auswahl vorhanden.",
+      "noAccount": "Es ist noch kein otu.lea Account verknüpft",
       "filter": {
         "alphaLevel": "Alpha-Level der Kann-Beschreibung",
         "accomplishments": "Erfüllen der Kann-Beschreibung",
