--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -2,6 +2,7 @@
   "pages": {
     "user": {
       "allDates": "Alle Testungen",
+      "selectedDates": "Testungen",
       "noData": "Es sind noch keine Testreihen von dieser Person abgeschlossen worden.",
       "noRecords": "Es sind keine Einträge für diese Auswahl vorhanden.",
       "noAccount": "Es ist noch kein otu.lea Account verknüpft",
@@ -20,6 +21,8 @@
     "title": "Testung"
   },
   "competency": {
+    "shortCode": "ID",
+    "category": "Kategorie",
     "notAccomplished": "Nicht erfüllt",
     "notEnough": "Nicht genug getestet",
     "accomplished": "Voll erfüllt",
