fix(ui): visualization integrated and fixed

--- a/imports/ui/pages/class/visualization/i18n/de.json
+++ b/imports/ui/pages/class/visualization/i18n/de.json
@@ -2,6 +2,7 @@
   "visualization": {
     "overview": "Verlaufsübersicht",
     "description": "Aktuelle Übersicht des Kurses über alle Kompetenzen",
-    "testDate": "Testdatum"
+    "testDate": "Testdatum",
+    "filter": "Personen filtern"
   }
 }
