fix(ui): display layout even if not connected to remote

--- a/imports/ui/pages/myclasses/i18n/de.json
+++ b/imports/ui/pages/myclasses/i18n/de.json
@@ -1,6 +1,7 @@
 {
   "pages": {
     "myClasses": {
+      "connecting": "Verbinde mit Otu.Lea, Einige Funktionen sind bis dahin eingeschränkt.",
       "running": "Laufende Kurse",
       "completed": "Abgeschlossene Kurse",
       "upcoming": "Ausstehende Kurse",
