fix(ui): adding new users need to fulfill minimal validation requirements

--- a/imports/ui/pages/myclasses/i18n/de.json
+++ b/imports/ui/pages/myclasses/i18n/de.json
@@ -45,5 +45,10 @@
         }
       }
     }
+  },
+  "user": {
+    "addUserNoValues": "TN benötigt mind. eine Angabe",
+    "addUserAlreadyExists": "TN existiert bereits. Bitte wählen Sie die Person aus der Liste aus.",
+    "userIsInvalid": "TN Code ist ungültig"
   }
 }
