--- a/imports/ui/forms/courseUsers/i18n/de.json
+++ b/imports/ui/forms/courseUsers/i18n/de.json
@@ -1,9 +1,9 @@
 {
   "courseUsers": {
     "title": "Kurs Teilnehmer:innen",
-    "noUsers": "(Noch) keine Teilnehmer:innen vorhanden",
-    "select": "Bestehende Teilnehmer:innen auswählen",
+    "noUsers": "(Noch) keine Teilnehmer:innen vorhanden oder alle bereits ausgewählt",
+    "select": "Bestehende TN auswählen",
     "noCode": "Ohne login code",
-    "add": "Hinzufügen"
+    "add": "TN neu anlegen"
   }
 }
