--- a/imports/ui/pages/user/i18n/de.json
+++ b/imports/ui/pages/user/i18n/de.json
@@ -1,6 +1,8 @@
 {
   "pages": {
     "user": {
+      "loadRecords": "Ergebnisse und Bewertungen",
+      "isRecentCompleted": "Auswahl ist die aktuellste Testung",
       "allDates": "Alle Testungen",
       "selectedDates": "Testungen",
       "noData": "Es sind noch keine Testreihen von dieser Person abgeschlossen worden.",
