--- a/resources/i18n/de/de.json
+++ b/resources/i18n/de/de.json
@@ -53,7 +53,11 @@
     "myClasses": {
       "title": "Meine Kurse"
     },
+    "login": {
+      "title": "Anmelden"
+    },
     "logout": {
+      "title": "Abmelden",
       "logout": "Abmelden",
       "loggingOut": "Sie werden abgemeldet...",
       "loggedOut": "Sie wurden erfolgreich abgemeldet!"
